testcases/phase2/check8/check08mbaw-Everything.rc

function: void main(int q) {
  /*int b;
  int b = 0;

  const int j = b;
  const int r = b, a = b;  // do we print second error?
  const int g = 4, a = b;  // do we print second error?

  const int i = 3;

  const int c = 5.2;

  const float f = 5;*/

  /*int a = 5;
  int w = 7.8;
  int y = 1, x = 2;
  int z = 0.5, h =3;
  int p, q = 3.2, o = 5;*/


  /*// doing illegal assignment;*/
  /*float b;*/
  /*int i = b;*/

  // ERROR - legal c?
  /* const int d = a;*/


  // constant folding

  /*int x = 1, y = 9;
  const int a = 3;
  const float b = 7;
  int z = x + y;
  const float h = a + b;

  //bool m = a == b;
  int g = x + a;*/
  
/*// start herre
const float f = 3 + 3;

int i = 3.0 + 3.0;

  // ERROR
  int j = 3 + 3.0;
*/

// LogBoolUniOperator Tests
// checking ! for bool
const bool a = true; 
const bool b = !a; 


// LogBoolBinOperator Tests
// checking || and && 
const bool logor1 = false ;
const bool logor2 = true; 

// ok
const bool logresult = logor1 || logor2; 
bool logresult2 = logor1 && logor2; 

// error
const bool logresult3 = 1 && 2; 
  

// BitNumBinOperator Tests
  const int ia = 5;
  const int ib = 6;
  const int ic = 7;

  const float fa = 5.5;
  const float fb = 6.6;
  const float fb = 7.7;
 
  const bool ba = true;
  const bool bb = false;
  
  // ok
  const int id = ia | ib;

  // ok
  const int ie = ia | ib;

  // error
  const int ig = fa | fb;

  // error
  const int ih = fb | ia;


  // ModNumBinOperator
  // ok
  const int ij = ia % ib;

  // error 
  const int iq = ia % fa;

  // error must ErrorMsg.error8_CompileTime
  int il = 5;
  const int im = il + 5;

  // error
  const int ip = ij % il;  

  // CompBoolBinOperator test
 
  // ok
  const bool bc = fa > fb; 

  // ok 
  const bool bd = fa > 7.7; 

  // error
  const bool bd = ba  > 7.7; 

  // error
  const bool be = fa > il;


  // EquBoolBinOperator Tests

  // ok
  const bool bg = fa == 5.5;
  
  // ok
  const bool bh = fa == fb;

  // error
  const bool bj = fa == il;

  // error
  const bool bk = fa == ba;

  // error must ErrorMsg.error8_CompileTime
  const int ik;
}

